<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/prpfile_toolbar"
        layout="@layout/profile_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <com.cc.grameenphone.views.CustomTextInputLayout
            android:id="@+id/firstName_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/first_nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="text" />
        </com.cc.grameenphone.views.CustomTextInputLayout>

        <com.cc.grameenphone.views.CustomTextInputLayout
            android:id="@+id/lastName_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/last_nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="text" />
        </com.cc.grameenphone.views.CustomTextInputLayout>

        <com.cc.grameenphone.views.CustomTextInputLayout
            android:id="@+id/emailid_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/email_idEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />
        </com.cc.grameenphone.views.CustomTextInputLayout>

        <com.cc.grameenphone.views.CustomTextInputLayout
            android:id="@+id/nationalId_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/national_idEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/national_id" />
        </com.cc.grameenphone.views.CustomTextInputLayout>

        <com.cc.grameenphone.views.CustomTextInputLayout
            android:id="@+id/dateOfBirth_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/date_of_birthEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Date_of_birth"
                android:inputType="number" />
        </com.cc.grameenphone.views.CustomTextInputLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>