<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/grameen_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/copy"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
         />
    <TextView
        android:id="@+id/grameen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grameen_icon"
        android:text="@string/grameenPhone"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_alignLeft="@+id/grameen_icon"/>

    <LinearLayout
        android:id="@+id/phnnumb_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/grameen_text"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:weightSum="1"
        >
<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_weight="0.2"
    android:layout_marginTop="9dp"
    android:orientation="vertical">
        <TextView
            android:id="@+id/number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberText"
            android:textSize="17sp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_gravity="center"
        />

</LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            >

            <EditText
                android:id="@+id/number_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Phone number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="#929292"
                android:textSize="17sp"
                android:textStyle="bold" />
            /></android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/wallet_pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phnnumb_layout"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/wallet_pin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_wallet_pin"/>

        <EditText
            android:id="@+id/wallet_pin_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/checkbox_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wallet_pin_layout"
        android:orientation="horizontal"
        android:padding="10dp"
        >
       <CheckBox
           android:id="@+id/check_box"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/accept_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textSize="15sp"
            android:layout_toRightOf="@+id/check_box"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/terms_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_condition"
            android:textSize="15sp"
            android:layout_toRightOf="@+id/accept_text"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:textColor="@color/blue_900"
            />

    </RelativeLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/login_button"
        android:layout_below="@+id/checkbox_layout"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="10dp"
        android:layout_below="@+id/login_btn"
        >
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#808080"
        android:layout_gravity="center"
        android:layout_weight="0.45"/>
    <TextView
        android:id="@+id/or_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="OR"
        android:gravity="center"
        android:layout_weight="0.1"
        />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#808080"
            android:layout_gravity="center"
            android:layout_weight="0.45"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/create_new_wallet"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/login_button"
        />


</RelativeLayout>
