<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/electricity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RadioGroup
        android:id="@+id/custodial_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radioBPDB"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawablePadding="50dp"
            android:fontFamily="Roboto regular"
            android:paddingLeft="10dp"
            android:text="BPDB"
            android:textColor="#666666"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioDESCO"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="50dp"
            android:fontFamily="Roboto regular"
            android:paddingLeft="10dp"
            android:text="DESCO"
            android:textColor="#666666"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioDPDC"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="50dp"
            android:fontFamily="Roboto regular"
            android:paddingLeft="10dp"
            android:text="DPDC"
            android:textColor="#666666"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioOthers"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="50dp"
            android:fontFamily="Roboto regular"
            android:paddingLeft="10dp"
            android:text="Others"
            android:textColor="#666666"
            android:textSize="15sp" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/account_numb_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custodial_radiogroup"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"

        >

        <EditText
            android:id="@+id/account_numbEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/account_number"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/bill_numb_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_numb_container"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/bill_numbEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/bill_number"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sbmt_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/bill_numb_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:text="@string/submit"
        android:textColor="@color/white"

        />

</RelativeLayout>